# mcp-transcriptions-server

./: pyproject.toml
src/mcp_transcriptions_server/: openai_transciption.py
tests/: test_e2e.py  test_main.py  test_openai_transcription.py
